Archive2/7f/64db6fae3b4084/output
+ clang++ -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -pthread -Wconversion main.cpp
main.cpp:19:15: error: type 'HasEmpty &' cannot be used prior to '::' because it has no members
    decltype(&T::empty) p;
              ^
main.cpp:62:17: note: in instantiation of template class 'has_empty<HasEmpty &>' requested here
   return valid<has_empty<T>::value>::check(std::forward<T>(toCheck), toThrow);
                ^
main.cpp:93:5: note: in instantiation of function template specialization 'do_check<HasEmpty &, error_type, void>' requested here
    do_check(he, e); // does not work, has_empty<T>::value is 0
    ^
1 error generated.
+ g++-4.9 -std=c++11 -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter -pthread -Wconversion main.cpp
main.cpp: In instantiation of 'class has_empty<HasEmpty&>':
main.cpp:62:78:   required from 'T&& do_check(T&&, const E&) [with T = HasEmpty&; E = error_type; <template-parameter-1-3> = void]'
main.cpp:93:19:   required from here
main.cpp:19:14: error: 'empty' is not a member of 'HasEmpty&'
     decltype(&T::empty) p;
              ^
